// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pill/> quando renderizado e props categoriaSelecionada diferente da label 1`] = `
<View
  selecionado={false}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#F4A273",
        "borderBottomLeftRadius": 20,
        "borderBottomRightRadius": 20,
        "borderTopLeftRadius": 20,
        "borderTopRightRadius": 20,
        "height": 30,
        "justifyContent": "center",
        "paddingHorizontal": 10,
      },
      undefined,
    ]
  }
  testID="wraper-pill"
>
  <Text
    selecionado={false}
    style={
      [
        {
          "color": "#1A1D26",
          "fontFamily": "SofiaPro-SemiBold",
          "fontSize": 21.5,
          "lineHeight": 25.5,
        },
        [
          {
            "color": "#1A1D26",
          },
          undefined,
        ],
      ]
    }
    weight="semibold"
  >
    category
  </Text>
</View>
`;

exports[`<Pill/> quando renderizado e props categoriaSelecionada igual a label 1`] = `
<View
  selecionado={true}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#EA5B0C",
        "borderBottomLeftRadius": 20,
        "borderBottomRightRadius": 20,
        "borderTopLeftRadius": 20,
        "borderTopRightRadius": 20,
        "height": 30,
        "justifyContent": "center",
        "paddingHorizontal": 10,
      },
      undefined,
    ]
  }
  testID="wraper-pill"
>
  <Text
    selecionado={true}
    style={
      [
        {
          "color": "#1A1D26",
          "fontFamily": "SofiaPro-SemiBold",
          "fontSize": 21.5,
          "lineHeight": 25.5,
        },
        [
          {
            "color": "#FFFFFF",
          },
          undefined,
        ],
      ]
    }
    weight="semibold"
  >
    category
  </Text>
</View>
`;
